gitops/rendered/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiz-app
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
