gitops/rendered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app
  namespace: wiz-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: wiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiz-app
  template:
    metadata:
      labels:
        app: wiz-app
    spec:
      serviceAccountName: wiz-app
      containers:
        - name: app
          image: europe-west1-docker.pkg.dev/project-b4952354-c0d7-4e0a-a90/wiz-app/app:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3000
